# unbound-telemetry

./: .dockerignore  .rustfmt.toml  .snapcraft.yaml  COMPARISON.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  unbound-telemetry.service
.github/: dependabot.yml
.github/workflows/: ci.yml
.snapcraft/: daemon.start
assets/: index.html  test_text_stats.txt  test_text_stats_1_13_2.txt
benches/: text_parser.rs
fuzz/: Cargo.toml
fuzz/dicts/: text_parser.txt
fuzz/fuzz_targets/: fuzz_measurement_observe.rs  fuzz_text_parser.rs
src/: lib.rs  macros.rs
src/metrics/: mod.rs  observe.rs  value.rs
src/sources/: mod.rs  tls.rs  uds.rs
src/sources/control/: mod.rs  text.rs  tls.rs  uds.rs
src/sources/memory/: ffi.rs  mod.rs  shm.rs  types.rs  wrappers.rs
src/statistics/: class.rs  histogram.rs  mod.rs  opcode.rs  rcode.rs  rtype.rs
src/statistics/parser/: errors.rs  mod.rs  tests.rs  types.rs
